quotes dark mode & responsive fix

--- a/public/src/css/media-queries.css
+++ b/public/src/css/media-queries.css
@@ -138,6 +138,9 @@
     .policies-nav-mobile {
         display: none;
     }
+    #quotes-section .lead {
+        font-size: 16px !important;
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -201,6 +204,12 @@
     }
     .notable-image {
         object-position: 0px 0px;
+    }
+    #quotes-section .lead {
+        font-size: 14px !important;
+    }
+    #quotes-section .blockquote-footer {
+        font-size: 10px !important;
     }
 }
 
